# signal-forge

./: .env.example  README.md  docker-compose.yml  pyproject.toml
app/: cli.py  config.py
app/api/: main.py
app/ingestion/: fmp.py  reddit.py  rss.py  sec_edgar.py
app/processing/: dedupe.py  entity_extraction.py  event_classifier.py  scoring.py  sentiment.py
app/storage/: db.py  models.py
