[project]
name = "market-news-scanner"
version = "0.1.0"
description = "Local-first news ingestion and signal-scoring system for market-moving stock news"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlmodel>=0.0.18",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "click>=8.1.7",
    "praw>=7.7.1",
    "openai>=1.14.0",
    "tenacity>=8.2.3",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.3.0",
]

[project.scripts]
scanner = "app.cli:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"